; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_push_util.c_record_update_tips_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_push_util.c_record_update_tips_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, %struct.TYPE_7__* }
%struct.TYPE_8__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @record_update_tips_cb(i8* %0, i32* %1, i32* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca %struct.TYPE_8__*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %12, %struct.TYPE_8__** %10, align 8
  %13 = call %struct.TYPE_7__* @git__calloc(i32 1, i32 16)
  store %struct.TYPE_7__* %13, %struct.TYPE_7__** %9, align 8
  %14 = call i32 @cl_assert(%struct.TYPE_7__* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = call %struct.TYPE_7__* @git__strdup(i8* %15)
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 2
  store %struct.TYPE_7__* %16, %struct.TYPE_7__** %18, align 8
  %19 = call i32 @cl_assert(%struct.TYPE_7__* %16)
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 1
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @git_oid_cpy(i32* %21, i32* %22)
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @git_oid_cpy(i32* %25, i32* %26)
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %31 = call i32 @git_vector_insert(i32* %29, %struct.TYPE_7__* %30)
  ret i32 0
}

declare dso_local i32 @cl_assert(%struct.TYPE_7__*) #1

declare dso_local %struct.TYPE_7__* @git__calloc(i32, i32) #1

declare dso_local %struct.TYPE_7__* @git__strdup(i8*) #1

declare dso_local i32 @git_oid_cpy(i32*, i32*) #1

declare dso_local i32 @git_vector_insert(i32*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
